--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -4,42 +4,62 @@
         <form [formGroup]="dataUserForm" class="k-form">
             <fieldset>
                 <legend>User Details</legend>
-
                 <label class="k-form-field">
                     <span>Имя пользователя</span>
-                    <input class="k-textbox" required placeholder="Имя" />
+                    <input class="k-textbox" #name formControlName="name" minlength="5" max="15" required placeholder="Имя" />
+                    <div class="err" *ngIf="userNameControl.invalid && userNameControl.touched">
+                        Введите имя от 5 до 15 букв!
+                    </div>
                 </label>
                 <label class="k-form-field">
                     <p>Пол</p>
-                    <kendo-dropdownlist textField="text" valueField="value" [data]="genderRoles"></kendo-dropdownlist>
+                    <kendo-dropdownlist textField="text" formControlName="gender" valueField="value" [data]="genderRoles"></kendo-dropdownlist>
+                    <div class="err" *ngIf="userGenderControl.invalid && userGenderControl.touched">
+                        Виберите пол!
+                    </div>
                 </label>
                 <label class="k-form-field">
                     <span>Дата рождения</span>
                     <kendo-datepicker
+                        formControlName="dateOfBirth"
                         [format]="format"
                         [value]="valueDateOfBirth"
                     >
                     </kendo-datepicker>
+                    <div class="err" *ngIf="userDateOfBirthControl.invalid && userDateOfBirthControl.touched">
+                        Выберите дату рождения!
+                    </div>
                 </label>
                 <label class="k-form-field">
                     <p>Направление обучения</p>
-                    <kendo-dropdownlist textField="text" valueField="value" [data]="directionsOfStudy"></kendo-dropdownlist>
+                    <kendo-dropdownlist textField="text" formControlName="directionOfStudy" valueField="value" [data]="directionsOfStudy"></kendo-dropdownlist>
+                    <div class="err" *ngIf="userDirectionOfStudyControl.invalid && userDirectionOfStudyControl.touched">
+                        Выберите направление обучения!
+                    </div>
                 </label>
                 <label class="k-form-field">
                     <span>Дата начала обучения</span>
                     <kendo-datepicker
+                        formControlName="startDateOfTraining"
                         [format]="format"
                         [value]="valueDateStartTraining"
                     >
                     </kendo-datepicker>
+                    <div class="err" *ngIf="userStartDateOfTrainingControl.invalid && userStartDateOfTrainingControl.touched">
+                        Выберите дату начала обучения!
+                    </div>
                 </label>
                 <label class="k-form-field">
                     <span>Дата конца обучения</span>
                     <kendo-datepicker
+                        formControlName="endDateOfTraining"
                         [format]="format"
                         [value]="valueDateFinishTraining"
                     >
                     </kendo-datepicker>
+                    <div class="err" *ngIf="userEndDateOfTrainingControl.invalid && userEndDateOfTrainingControl.touched">
+                        Выберите дату конца обучения!
+                    </div>
                 </label>
             </fieldset>
 
@@ -48,6 +68,5 @@
                 <button type="button" class="k-button k-primary" (click)="submit()">Отправить</button>
             </div>
         </form>
-
     </kendo-window>
 </div>
