--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -5,21 +5,21 @@
             <fieldset>
                 <legend>User Details</legend>
                 <label class="k-form-field">
-                    <span>Имя пользователя</span>
+                    <span ngClass="required">*</span><span>Имя пользователя</span>
                     <input class="k-textbox" #name formControlName="name" minlength="5" max="15" required placeholder="Имя" />
                     <div class="err" *ngIf="userNameControl.invalid && userNameControl.touched">
                         Введите имя от 5 до 15 букв!
                     </div>
                 </label>
                 <label class="k-form-field">
-                    <p>Пол</p>
+                    <span ngClass="required">*</span><span>Пол</span>
                     <kendo-dropdownlist textField="text" formControlName="gender" valueField="value" [data]="genderRoles"></kendo-dropdownlist>
                     <div class="err" *ngIf="userGenderControl.invalid && userGenderControl.touched">
                         Виберите пол!
                     </div>
                 </label>
                 <label class="k-form-field">
-                    <span>Дата рождения</span>
+                    <span ngClass="required">*</span><span>Дата рождения</span>
                     <kendo-datepicker
                         formControlName="dateOfBirth"
                         [format]="format"
@@ -31,14 +31,14 @@
                     </div>
                 </label>
                 <label class="k-form-field">
-                    <p>Направление обучения</p>
+                    <span ngClass="required">*</span><span>Направление обучения</span>
                     <kendo-dropdownlist textField="text" formControlName="directionOfStudy" valueField="value" [data]="directionsOfStudy"></kendo-dropdownlist>
                     <div class="err" *ngIf="userDirectionOfStudyControl.invalid && userDirectionOfStudyControl.touched">
                         Выберите направление обучения!
                     </div>
                 </label>
                 <label class="k-form-field">
-                    <span>Дата начала обучения</span>
+                    <span ngClass="required">*</span><span>Дата начала обучения</span>
                     <kendo-datepicker
                         formControlName="startDateOfTraining"
                         [format]="format"
@@ -50,7 +50,7 @@
                     </div>
                 </label>
                 <label class="k-form-field">
-                    <span>Дата конца обучения</span>
+                    <span ngClass="required">*</span><span>Дата конца обучения</span>
                     <kendo-datepicker
                         formControlName="endDateOfTraining"
                         [format]="format"
@@ -65,7 +65,7 @@
 
             <div class="btn-block">
                 <button type="button" class="k-button" (click)="close()">Отмена</button>
-                <button type="button" class="k-button k-primary" (click)="submit()">Отправить</button>
+                <button type="button" class="k-button k-primary" [disabled]="!dataUserForm.valid" (click)="submit()">Отправить</button>
             </div>
         </form>
     </kendo-window>
