Implementation of the name validator has been made, variables have been moved to a separate file, some styles have been added

--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -10,6 +10,7 @@
                     <div class="err" *ngIf="userNameControl.invalid && userNameControl.touched">
                         Введите имя от 5 до 15 букв!
                     </div>
+                    <div class="err" *ngIf="userNameControl.errors?.Repeated">Имя должно быть уникальным!</div>
                 </label>
                 <label class="k-form-field">
                     <span ngClass="required">*</span><span>Пол</span>
