--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -30,3 +30,20 @@
         }
     }
 }
+
+// .btn-edit, .btn-delete{
+//     width: 100%;
+//     padding: 10px 5px;
+//     border-radius: 5px;
+//     border: none;
+//     outline: none;
+//     background: #fff;
+// }
+
+// .btn-delete{
+//     border: 1px solid #f31700 ;
+// }
+
+// .btn-edit{
+//     border: 1px solid #0058e9;
+// }
