Code cleanup - adding typing to methods

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,5 +1,5 @@
 <div>
-    <kendo-grid [data]="usersData" [height]="410" class="userInfo">
+    <kendo-grid [data]="usersData" [height]="410">
         <kendo-grid-column field="name" title="Имя пользователя">
         </kendo-grid-column>
         <kendo-grid-column field="gender.text" title="Пол">
