Moved the call of the modal window to the component of the modal window. Added a service for storing data.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
-    <div ngClass="btn-block">
-        <button kendoButton (click)="handleClick()">Добавить Пользователя</button>
-    </div>
-    <app-table [adding]="adding" [usersData]="dataOfUsers"></app-table>
-    <app-modal-window [usersData]="dataOfUsers" [adding]="adding"></app-modal-window>
+    
+    <app-modal-window ></app-modal-window>
+    <app-table></app-table>
+    
 </div>
