--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,5 +1,5 @@
 <div>
-    <kendo-grid [data]="usersData" (edit)="editHandler($event)" (remove)="removeHandler($event)" [height]="410">
+    <kendo-grid [data]="usersData" (edit)="onEdit($event)" (remove)="removeHandler($event)" [height]="410">
         <kendo-grid-column field="name" title="Имя пользователя">
         </kendo-grid-column>
         <kendo-grid-column field="gender.text" title="Пол">
@@ -14,7 +14,7 @@
         </kendo-grid-column>
         <kendo-grid-command-column field="id" title="Редактирование\Удаление">
             <ng-template kendoGridCellTemplate>
-                <button kendoGridEditCommand (click)="adding = !adding" [primary]="true">Edit</button>
+                <button kendoGridEditCommand [primary]="true">Edit</button>
                 <button kendoGridRemoveCommand>Delete</button>
             </ng-template>
         </kendo-grid-command-column>
